# frontmatter-gen

./: CNAME  CONTRIBUTING.md  Cargo.toml  README.md  TEMPLATE.md  crates.js  help.html  index.html  input.md  output.json  output.toml  search-index.js  settings.html  src-files.js
.github/: CODEOWNERS
.github/workflows/: audit.yml  check.yml  document.yml  lint.yml  release.yml  test.yml
benches/: frontmatter_benchmark.rs
examples/: error_examples.rs  extractor_examples.rs  fenced_examples.rs  frontmatter_examples.rs  lib_examples.rs  parser_examples.rs  types_examples.rs
examples/content/: post.md
examples/public/: index.html  post.html
examples/templates/: index.html  post.html
fmg/: all.html  fn.execute_command.html  fn.get_enabled_features.html  fn.main.html  fn.setup_logging.html  index.html  sidebar-items.js  static.INIT.html  static.LOGGER.html  struct.Logger.html
frontmatter_gen/: all.html  constant.MAX_FRONTMATTER_SIZE.html  constant.MAX_NESTING_DEPTH.html  fn.extract.html  fn.to_format.html  fn.validate_input.html  index.html  sidebar-items.js  struct.ParseOptions.html  type.Result.html
frontmatter_gen/cli/: index.html  struct.Cli.html
frontmatter_gen/config/: enum.ConfigError.html  enum.Error.html  index.html  sidebar-items.js  struct.Builder.html  struct.Config.html  struct.ConfigBuilder.html
frontmatter_gen/engine/: index.html  sidebar-items.js  struct.ContentFile.html  struct.Engine.html
frontmatter_gen/error/: enum.Category.html  enum.EngineError.html  enum.Error.html  enum.FrontmatterError.html  fn.example_usage.html  index.html  sidebar-items.js  struct.Context.html
frontmatter_gen/extractor/: fn.detect_format.html  fn.extract_delimited_frontmatter.html  fn.extract_json_frontmatter.html  fn.extract_raw_frontmatter.html  index.html  sidebar-items.js
frontmatter_gen/parser/: fn.parse.html  fn.parse_with_options.html  fn.to_string.html  fn.validate_frontmatter.html  index.html  sidebar-items.js  struct.ParseOptions.html
frontmatter_gen/prelude/: index.html
frontmatter_gen/ssg/: enum.SsgError.html  enum.SsgSubCommand.html  index.html  sidebar-items.js  struct.BuildArgs.html  struct.ServeArgs.html  struct.SsgCommand.html
frontmatter_gen/types/: enum.Format.html  enum.Value.html  fn.escape_str.html  index.html  sidebar-items.js  struct.Frontmatter.html
frontmatter_gen/utils/: enum.UtilsError.html  index.html  sidebar-items.js
frontmatter_gen/utils/fs/: fn.copy_file.html  fn.create_directory.html  fn.create_temp_file.html  fn.validate_path_safety.html  index.html  sidebar-items.js  struct.TempFileTracker.html
frontmatter_gen/utils/log/: index.html  sidebar-items.js  struct.LogEntry.html  struct.LogWriter.html
search.desc/fmg/: fmg-desc-0-.js
search.desc/frontmatter_gen/: frontmatter_gen-desc-0-.js
src/: cli.rs  config.rs  engine.rs  error.rs  extractor.rs  lib.rs  main.rs  parser.rs  ssg.rs  types.rs  utils.rs
src/fmg/: main.rs.html
src/frontmatter_gen/: cli.rs.html  config.rs.html  engine.rs.html  error.rs.html  extractor.rs.html  lib.rs.html  parser.rs.html  ssg.rs.html  types.rs.html  utils.rs.html
trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/iter/traits/collect/: trait.FromIterator.js  trait.IntoIterator.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/core/str/traits/: trait.FromStr.js
trait.impl/log/: trait.Log.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
type.impl/core/result/: enum.Result.js
