# -----------------------------------------------------------------------------
# FrontMatter Gen - A Rust library for generating and parsing frontmatter in various formats.
# -----------------------------------------------------------------------------

[package]
name = "frontmatter-gen"
version = "0.0.2"
edition = "2021"
rust-version = "1.56.0"
license = "MIT OR Apache-2.0"
description = """
A Rust library for generating and parsing frontmatter in various formats.
"""
homepage = "https://frontmatter-gen.com/"
documentation = "https://frontmatter-gen.com/documentation/index.html"
repository = "https://github.com/sebastienrousseau/frontmatter-gen"
readme = "README.md"
build = "build.rs"

# -----------------------------------------------------------------------------
# Crate Configuration
# -----------------------------------------------------------------------------
categories = [
    "command-line-utilities",
    "data-structures",
    "text-processing",
    "parsing",
    "development-tools"
]

keywords = ["frontmatter", "yaml", "toml", "json", "frontmatter-gen"]

[lib]
name = "frontmatter_gen"
path = "src/lib.rs"

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
thiserror = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }

# -----------------------------------------------------------------------------
# Build Dependencies
# -----------------------------------------------------------------------------

[build-dependencies]
version_check = "0.9"

# -----------------------------------------------------------------------------
# Development Dependencies
# -----------------------------------------------------------------------------

[dev-dependencies]
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }

# -----------------------------------------------------------------------------
# Examples
# -----------------------------------------------------------------------------

[[example]]
name = "error"
path = "examples/error_examples.rs"

[[example]]
name = "extractor"
path = "examples/extractor_examples.rs"

[[example]]
name = "lib"
path = "examples/lib_examples.rs"

[[example]]
name = "parser"
path = "examples/parser_examples.rs"

[[example]]
name = "types"
path = "examples/types_examples.rs"

# -----------------------------------------------------------------------------
# Criterion Benchmark
# -----------------------------------------------------------------------------

[[bench]]
name = "frontmatter_benchmark"
harness = false

[profile.bench]
debug = true
