# -----------------------------------------------------------------------------
# FrontMatter Gen - A Rust library for generating and parsing frontmatter in various formats.
# -----------------------------------------------------------------------------

[package]
name = "frontmatter-gen"
version = "0.0.3"
edition = "2021"
rust-version = "1.56.0"
license = "MIT OR Apache-2.0"
description = """
A Rust library for generating and parsing frontmatter in various formats.
"""
homepage = "https://frontmatter-gen.com/"
documentation = "https://frontmatter-gen.com/documentation/index.html"
repository = "https://github.com/sebastienrousseau/frontmatter-gen"
readme = "README.md"
build = "build.rs"

# -----------------------------------------------------------------------------
# Crate Configuration
# -----------------------------------------------------------------------------
categories = [
    "command-line-utilities",
    "data-structures",
    "text-processing",
    "parsing",
    "development-tools"
]

keywords = ["frontmatter", "yaml", "toml", "json", "frontmatter-gen"]

# The library file that contains the main logic for the binary.
[lib]
name = "frontmatter_gen"
path = "src/lib.rs"

# The main file that contains the entry point for the binary.
[[bin]]
name = "frontmatter_gen"
path = "src/main.rs"

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive", "color", "help", "suggestions"] }
dtt = "0.0.8"
log = "0.4.22"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.12.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_yml = "0.0.12"
tera = "1.20.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
url = "2.5.3"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

# -----------------------------------------------------------------------------
# Build Dependencies
# -----------------------------------------------------------------------------

[build-dependencies]
version_check = "0.9.5"

# -----------------------------------------------------------------------------
# Development Dependencies
# -----------------------------------------------------------------------------

[dev-dependencies]
criterion = "0.5.1"
serde = { version = "1.0.215", features = ["derive"] }
tempfile = "3.14.0"

# -----------------------------------------------------------------------------
# Examples
# -----------------------------------------------------------------------------

[[example]]
name = "error"
path = "examples/error_examples.rs"

[[example]]
name = "extractor"
path = "examples/extractor_examples.rs"

[[example]]
name = "lib"
path = "examples/lib_examples.rs"

[[example]]
name = "parser"
path = "examples/parser_examples.rs"

[[example]]
name = "types"
path = "examples/types_examples.rs"

# -----------------------------------------------------------------------------
# Criterion Benchmark
# -----------------------------------------------------------------------------

[[bench]]
name = "frontmatter_benchmark"
harness = false

[profile.bench]
debug = true
